# qpid-dispatch

./: .asf.yaml  .clang-format  .dockerignore  .gitignore  .packit.yaml  .rat-excludes  .reviewboardrc  .travis.yml  ARCHIVE_REPO_ONLY--SOURCE_MIGRATED_TO_GIT--README.TXT  CMakeLists.txt  ChangeLog  Dockerfile  Jenkinsfile  KEYS  LICENSE  NOTICE  README  README.adoc  README.md  TODO  VERSION.txt  antora.yml  build_env.py.in  config.sh  i_am_unlicenced_file.txt  index.adoc  local-site.yml  lock-analyzer-e397609e.txt  macports.sh  netlify.sh  netlify.toml  package.json  pom.xml  quick-build.sh  reconfigure.in  run.py.in  setup.py.in  tox.ini
console/: .eslintrc.json  CMakeLists.txt  LICENSE  README.md  index.html
console/app/: app-small.js  app.js
console/config/: .gitignore  README  README.md  bower.json  config.py  deploy  index.html  package.json  schema.json
console/dispatch-dashboard/: MANIFEST.in  README.rst  setup.py
console/hawtio/: README.md  dispatch-hawtio-console-0.6.0.war  pom.xml
console/lib/: cubism.v1.min.js  hawtio-plugin-loader.js
console/playwright/: .editorconfig  .yarnrc.yml  Makefile.requirements  README.md  package.json  playwright.config.ts  qdrouterd.conf  runner.py
console/react/: .prettierrc  craco.config.js  package-lock.json  package.json  webpack.config.js
console/stand-alone/: .babelrc  .eslintrc  README.md  README.txt  bower.json  config.json  console-config.json  gulpfile.js  index.html  main.js  package-lock.json  package.json  tsconfig.json  tslint.json  vendor-css.txt  vendor-js.txt
console/test/: fake.py  index.html  package.json
doc/: CMakeLists.txt  README  README.adoc  README.rst  TODO  asciidoc.conf.in  conf.py.in  index.adoc  index.md  index.rst
doc/api/: CMakeLists.txt  README  dev.doxygen.in  doxygen-wrapper.py  doxygen-wrapper.sh  doxygen.in  user.doxygen.in
doc/book/: CMakeLists.txt  README  TODO  addressing.md  amqp-mapping.md  amqp-mapping.rst  auto_links.adoc  auto_links.rst  basic_usage.adoc  basic_usage.rst  book.adoc  book.rst  client_compatibility.adoc  client_compatibility.rst  console.rst  console_installation.adoc  console_installation.rst  console_operation.adoc  console_operation.rst  console_overview.adoc  console_overview.rst  default_config.adoc  default_config.rst  index.md  introduction.md  introduction.rst  link_routing.adoc  link_routing.rst  policy.adoc  release-0.1.md  schema_md.py  schema_rst.py  schema_txt.py  site-html.pd  technical_details.rst  theory_of_operation.adoc  tools.rst  using.md  using.rst
doc/common/: fragment-router-sasl-para.adoc  fragment-starting-router-step.adoc
doc/internal-resources/: README.adoc  contrib-guide.adoc  style-guide.adoc  template-concept.adoc  template-reference.adoc
doc/man/: *shell*  CMakeLists.txt  README  README.adoc  check_help2man.py  help2man.py  help2md.py  help2rst.py  help2txt.py  man.template.pd  man2book.py  qdmanage.8.adoc  qdmanage.8.in  qdmanage.8.noopt.md.in  qdmanage.h2m  qdmanage.h2m.in  qdmanage.rst.in  qdrouterd.8.adoc  qdrouterd.8.in  qdrouterd.8.noopt.md.in  qdrouterd.conf.5  qdrouterd.conf.5.in  qdrouterd.conf.5.py  qdrouterd.rst.in  qdrouterd_conf_man.py  qdrouterd_man.py  qdstat.8.adoc  qdstat.8.in  qdstat.8.noopt.md.in  qdstat.h2m  qdstat.h2m.in  qdstat.rst
doc/new-book/: README.adoc  attributes.adoc  book.adoc  configuration-connections.adoc  configuration-reference.adoc  configuration-security.adoc  cyrus-sasl.adoc  getting-started.adoc  introduction.adoc  logging.adoc  management-entities.adoc  managing-using-qdmanage.adoc  monitoring-using-qdstat.adoc  reliability.adoc  revision-info.adoc  routing.adoc  technical-details-specifications.adoc  theory_of_operation.adoc  understand-router-configuration.adoc  using-console.adoc
doc/notes/: code-conventions.md  code-conventions.rst  code-conventions.txt  policy.md  qdr-policy-01.odt  qdr-policy-diagrams-01.odg  qdr-policy-todo.md
doc/templates/: layout.html
docs/: CMakeLists.txt  README.adoc  README.md
docs/books/: CMakeLists.txt  nav.adoc
docs/man/: CMakeLists.txt  asciidoc.conf.in  help2txt.py  qdmanage.8.adoc  qdrouterd.conf.5.py  qdstat.8.adoc
docs/notes/: code-conventions.md  contrib-guide.adoc  doc-contrib-guide.adoc  style-guide.adoc  threading-info.txt
python/: CMakeLists.txt  install_python.cmake  qpid_dispatch_site.py.in  setup.py.in
python/qpid_dispatch/: __init__.py  site.py  site_data.py.in
python/qpid_dispatch_internal/: dispatch.py  dispatch.pyi  dispatch_c.py
router/: CMakeLists.txt
router/src/: config.h.in  main.c  version.h.in
src/: .clang-format  CMakeLists.txt  address_lookup_utils.c  agent.c  agent.h  agent_handler.h  agent_private.h  alloc.c  alloc.h  alloc_malloc.h  alloc_pool.c  alloc_pool.h  alloc_private.h  amqp.c  annotation.c  annotation_private.h  aprintf.c  aprintf.h  atomic.c  bitmask.c  buffer.c  buffer_field_api.h  c_entity.c  c_entity.h  compose.c  compose_private.h  conditionals.h.in  config.c  config.h.in  config_private.h  connection.c  connection.h  connection_manager.c  connection_manager_private.h  connection_private.h  connector.c  connector.h  connector_private.h  container.c  ctools.c  (+81 more)
src/adaptors/: adaptor_utils.c  adaptor_utils.h  http_adaptor.c  http_adaptor.h  http_common.c  http_common.h  reference_adaptor.c  tcp_adaptor.c  tcp_adaptor.h  test_adaptor.c
src/posix/: driver.c  threading.c
tests/: CMakeLists.txt  TCP_echo_client.py  TCP_echo_server.py  alloc_test.c  asan.supp  authservice.py  authservice.py.in  buffer_test.c  clogger.c  compose_test.c  config_build.sh.in  core_timer_test.c  crasher.c  dummy.conf  failoverlist_test.c  failoverserver.py  failoverserver.py.in  field_test.c  friendship.proto  friendship_pb2.py  friendship_pb2_grpc.py  friendship_server.py  hash_test.c  http1_tests.py  http2_server.py  http2_slow_q2_server.py  hyperh2_server.py  lsan.supp  lsan_3rdparty.supp  message_test.c  parse_test.c  parse_tree_tests.c  policy_test.c  proton_utils_tests.c  qdstat_test.sh  router_engine_test.py  router_network.py  router_policy_test.py  run.py.in  run_system_tests.py  (+101 more)
(+1398 files in other folders)
